@@ -455,7 +455,8 @@ if (eval $ExtUtils::MakeMaker::VERSION >= 5.43) {
         'zentooo <ankerasoy@gmail.com>',
       ],
     },
-    TEST_REQUIRES => { 'Test::Simple' => '0.90',
+    TEST_REQUIRES => { 'bigint'       => 0,
+                       'Test::Simple' => '0.90',
                        'Test::Deep'   => 0,
                        'Time::HiRes'  => 0,
     },
